fix: items and items-wrap height fix

--- a/src/containers/PageConstructor/components/ConstructorItem/ConstructorItem.scss
+++ b/src/containers/PageConstructor/components/ConstructorItem/ConstructorItem.scss
@@ -1,8 +1,9 @@
 @import '../../../../../styles/variables';
 @import '../../../../../styles/mixins';
 
-$block: '.#{$ns}constructor-block';
+$block: '.#{$ns}constructor-item';
 
 #{$block} {
-    @include indents(&);
+    height: inherit;
+    width: inherit;
 }
